fix: minor bugs (#94)
* feat: cleanup after generating html

* fix: rebase issue

* feat: removing raw css

* feat: adding image viewing mode

* fix: ignoring *_templ.go files

* fix: ignoring main bin and adding towebp-l

* fix: adding go.mod

* fix: big screw up, merged main into dev and it messed up everyting

* fix: workflow

* fix: fixing .gitignore on main branch

* fix: main.go

* fix: removing .air.toml from main

* fix: go.sum

* fix: fixing wide image width in changing screen

* fix: trying to fix nav on mobile

* fix: fixing nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* feat: changing nav completely and accent color changes

* fix: something went wrong generating css on previous commit

* feat: fixing minor bugs

---------

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,11 +8,11 @@
     }
 
     h2 {
-        @apply text-2xl md:text-4xl xl:text-5xl py-2 lg:py-4
+        @apply text-2xl sm:text-4xl xl:text-5xl pb-2 sm:pb-4 xl:pb-6
     }
 
     h3 {
-        @apply text-lg md:text-2xl xl:text-3xl pb-[0.250rem] lg:pb-3 overflow-x-hidden
+        @apply text-lg sm:text-2xl xl:text-3xl pb-[0.250rem] sm:pb-3 overflow-x-hidden
     }
 
     h3::after {
@@ -25,11 +25,11 @@
     }
 
     h5 {
-        @apply text-[0.92rem] md:text-lg xl:text-xl font-semibold
+        @apply text-[0.92rem] sm:text-lg xl:text-xl font-semibold
     }
 
     span {
-        @apply text-xs md:text-sm xl:text-base font-normal text-[#747474] dark:text-[#c5c5c5]
+        @apply text-xs sm:text-sm xl:text-base font-normal text-[#747474] dark:text-[#c5c5c5]
     }
 
     p {
@@ -37,7 +37,7 @@
     }
 
     p, ul {
-        @apply text-[0.80rem] md:text-base xl:text-lg
+        @apply text-[0.80rem] sm:text-base xl:text-lg
     }
 
     .list-disc li {
@@ -47,7 +47,7 @@
 
 @layer utilities {
     .vertical-seperator {
-        @apply w-[1px] lg:w-[2px] h-3 md:h-6 dark:bg-white bg-black
+        @apply w-[1px] lg:w-[2px] h-3 sm:h-6 dark:bg-white bg-black
     }
 
     .acc-anim {
